--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,1 +1,18 @@
 <h1>Yella JOSE!</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3">
+      test
+    </div>
+    <div class="col-sm-3">
+      test
+    </div>
+    <div class="col-sm-3">
+      test
+    </div>
+    <div class="col-sm-3">
+      test
+    </div>
+  </div>
+</div>
