--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,9 +5,9 @@ $body-bg: #ecf0f1;
 $font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $navbar-height:45px;
 $navbar-default-bg: white;
-$navbar-default-brand-color: #c0392b;
+$navbar-default-brand-color: #2ebd59;
 $jumbotron-bg: white; 
-$brand-primary: #c0392b;
+$brand-primary: #2ebd59;
 
 
 .center {
