--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -11,6 +11,9 @@
 
 <%= form_for :artist, url: artist_path, method: "put" do |f| %>
   <div class="form-group">
+    <%= f.file_field :avatar %>
+  </div>
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, :value => @artist.name, :class => "form-control" %>
   </div>
