--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -30,6 +30,7 @@
     <% end %>
   </div>
   <div class="panel-footer">
-    <%= render "devise/shared/links" %>
+    <a id="old-user">Already a User?</a>
+    <% render "devise/shared/links" %>
   </div>
 </div>
