--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,83 +5,18 @@
   # Welcome! you are now signed in :)
   <% else %>
   <p>
-    <%= link_to "Log in", new_user_session_path, class: "btn btn-default" %>
-    <%= link_to "Sign up", new_user_registration_path, class:"btn btn-primary" %>
+
   </p>
   <% end %>
 </div>
 
-<div id="card"> 
-  <div class="front"> 
-   <div class="panel panel-default">
-  <div class="panel-heading">
-    <h2>Log in</h2>
+<% unless user_signed_in? %>
+  <div id="card"> 
+    <div class="front">
+      <%= render "/devise/sessions/new"%>
+    </div> 
+    <div class="back">
+      <%= render "/devise/registrations/new"%>
+    </div> 
   </div>
-  <div class="panel-body">
-    <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-  </div>
-
-  <% if devise_mapping.rememberable? -%>
-    <div class="form-group">
-      <%= f.check_box :remember_me %>
-      <%= f.label :remember_me %>
-    </div>
-  <% end -%>
-
-  <div class="form-group">
-    <%= f.submit "Log in", class: "btn btn-primary" %>
-  </div>
-  <% end %>
-</div>
-  <div class="panel-footer">
-    <%= render "devise/shared/links" %>
-  </div>
-</div>
-  </div> 
-  <div class="back">
-    <div class="panel panel-default">
-  <div class="panel-heading">
-    <h2>Sign up</h2>
-  </div>
-  <div class="panel-body">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
-
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control"%>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "Sign up", class:"btn btn-primary" %>
-    </div>
-    <% end %>
-  </div>
-  <div class="panel-footer">
-    <%= render "devise/shared/links" %>
-  </div>
-</div>
-
-  </div> 
-</div>
+<% end %>
