--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -17,6 +17,6 @@
   <% end %>
 </div>
   <div class="panel-footer">
-    <%= render "devise/shared/links" %>
+    <%= link_to "Log in", new_user_session_path %>
   </div>
 </div>
