--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,13 @@
 </head>
 
 <body>
+
   <%= render "layouts/header" %>
 
   <div class="container">
+
+    <%= render 'layouts/messages' %>
+    
     <%= yield %>
   </div>
 
