added some bootstrap to home page and created footer partial

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -46,3 +46,8 @@ $brand-primary: #2ebd59;
     color: #468847;
     text-align: left;
  }
+
+ #footer {
+  height: 60px;
+  background-color: white;
+}
