--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,9 @@
 </head>
 
 <body>
-
   <%= render "layouts/header" %>
-
-  <div class="container">
-
-    <%= render 'layouts/messages' %>
-    
-    <%= yield %>
-  </div>
-
+  <%= render 'layouts/messages' %>
+  <%= yield %>
+  <%= render 'layouts/footer' %>
 </body>
 </html>
