--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 <body>
   <%= render "layouts/header" %>
   <%= render 'layouts/messages' %>
+
   <%= yield %>
-  <%= render 'layouts/footer' %>
+  
+  <% render 'layouts/footer' %>
 </body>
 </html>
