--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -47,7 +47,10 @@ $brand-primary: #2ebd59;
     text-align: left;
  }
 
- #footer {
+#footer {
+  // position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 60px;
-  background-color: white;
+  background-color: #f5f5f5;
 }
