--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -1,30 +1,35 @@
-<% if @artist.errors.any? %>
-  <div class="alert alert-danger">
-    <h2><%= pluralize(@artist.errors.count, "error") %> prevented this event from being saved:</h2>
-    <ul>
-    <% @artist.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
+<div class="container">
+  <% if @artist.errors.any? %>
+    <div class="alert alert-danger">
+      <h2><%= pluralize(@artist.errors.count, "error") %> prevented this event from being saved:</h2>
+      <ul>
+      <% @artist.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
-<%= form_for :artist, url: artists_path do |f| %>
-  <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name, :value => @artist.name, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :city %>
-    <%= f.text_field :city, :value => @artist.city, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_area :description, :value => @artist.description, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit 'Create', :class => 'btn btn-primary' %>
-  </div>
-<% end %>
+  <%= form_for :artist, url: artists_path do |f| %>
+    <div class="form-group">
+      <%= f.file_field :avatar %>
+    </div>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, :value => @artist.name, :class => "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :city %>
+      <%= f.text_field :city, :value => @artist.city, :class => "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, :value => @artist.description, :class => "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit 'Create', :class => 'btn btn-primary' %>
+    </div>
+  <% end %>
 
-<%= link_to 'Back', artists_path %>
+  <%= link_to 'Back', artists_path %>
+</div>
