--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,22 +1,24 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h2>Forgot your password?</h2>
-  </div>
-<div class="panel-body">
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h2>Forgot your password?</h2>
+    </div>
+  <div class="panel-body">
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control"%>
-  </div>
+    <div class="form-group">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, class: "form-control"%>
+    </div>
 
-  <div class="form-group">
-    <%= f.submit "Send reset instructions", class:"btn btn-primary"%>
+    <div class="form-group">
+      <%= f.submit "Send reset instructions", class:"btn btn-primary"%>
+    </div>
+    <% end %>
   </div>
-  <% end %>
-</div>
-  <div class="panel-footer">
-    <%= link_to "Log in", new_user_session_path %>
+    <div class="panel-footer">
+      <%= link_to "Log in", new_user_session_path %>
+    </div>
   </div>
 </div>
