--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-  <div class="alert alert-<%= key %>">
+  <div class="alert alert-<%= key %> fade in">
     <a href="#" data-dismiss="alert" class="close">×</a>
     <ul>
       <li>
